--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vitepress": "^1.6.3"
   },
   "dependencies": {
-    "vite-plugin-vitepress-auto-sidebar": "^1.7.1"
+    "vite-plugin-vitepress-auto-sidebar": "^1.7.1",
+    "vitepress-plugin-group-icons": "^1.3.5"
   }
 }
