--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   "devDependencies": {
     "busuanzi.pure.js": "^1.0.3",
     "canvas-confetti": "^1.9.3",
+    "medium-zoom": "^1.1.0",
     "vitepress": "^1.6.3"
   },
   "dependencies": {
+    "ixtd": "link:",
     "vite-plugin-vitepress-auto-sidebar": "^1.7.1",
     "vitepress-plugin-group-icons": "^1.3.5"
   }
