--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "busuanzi.pure.js": "^1.0.3",
     "canvas-confetti": "^1.9.3",
     "medium-zoom": "^1.1.0",
-    "vitepress": "^1.6.3"
+    "vitepress": "^1.6.3",
+    "vitepress-plugin-comment-with-giscus": "^1.1.15"
   },
   "dependencies": {
     "ixtd": "link:",
