--- a/package.json
+++ b/package.json
@@ -13,11 +13,21 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@antv/g2plot": "^2.4.32",
+    "@arco-design/web-vue": "^2.56.3",
+    "axios": "^1.7.9",
+    "blueimp-md5": "^2.19.0",
     "busuanzi.pure.js": "^1.0.3",
     "canvas-confetti": "^1.9.3",
+    "dayjs": "^1.11.13",
+    "fast-glob": "^3.3.3",
+    "gray-matter": "^4.0.3",
+    "markdown-it-footnote": "^4.0.0",
+    "markdown-it-mathjax3": "^4.3.2",
     "medium-zoom": "^1.1.0",
     "vitepress": "^1.6.3",
-    "vitepress-plugin-comment-with-giscus": "^1.1.15"
+    "vitepress-plugin-comment-with-giscus": "^1.1.15",
+    "vue": "^3.5.13"
   },
   "dependencies": {
     "ixtd": "link:",
