--- a/package.json
+++ b/package.json
@@ -34,5 +34,12 @@
     "vite-plugin-vitepress-auto-sidebar": "^1.7.1",
     "vitepress-plugin-group-icons": "^1.3.5"
   },
+  "pnpm": {
+    "overrides": {
+      "@antv/g-base": "0.5.11",
+      "@antv/path-util": "2.0.15",
+      "@antv/attr": "0.3.5"
+    }
+  },
   "type": "module"
 }
